--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
 
     //BottomNavigationViewEx Library
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
