--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,11 @@ dependencies {
 
     //Universal image loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    //Firebase authentication
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
 }
+
+//Firebase
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
